<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/edit_item_background">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonItemEdit"
                android:layout_width="99dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/edit"
                app:layout_constraintStart_toEndOf="@+id/checkPurchase"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonhide"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/hide_detail"
                app:layout_constraintStart_toEndOf="@+id/checkPurchase"
                app:layout_constraintTop_toBottomOf="@+id/buttonItemEdit" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/textview"
                app:layout_constraintStart_toEndOf="@+id/imageCategory"
                app:layout_constraintTop_toBottomOf="@+id/textName" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageCategory"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageCategory"
                android:layout_width="114dp"
                android:layout_height="98dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/categorypicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <CheckBox
                android:id="@+id/checkPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/purchased"
                app:layout_constraintStart_toEndOf="@+id/imageCategory"
                app:layout_constraintTop_toBottomOf="@+id/textPrice" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/textview"
                app:layout_constraintStart_toEndOf="@+id/imageCategory"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="90dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete"
                app:layout_constraintStart_toEndOf="@+id/checkPurchase"
                app:layout_constraintTop_toBottomOf="@+id/buttonhide" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
